NaverMap API added Distance Calculation added Internet Permission updated

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -7,6 +7,8 @@
     <string name="action_penometer_start">Penometer Start!</string>
     <string name="action_penometer_stop">Penometer Stop!</string>
 
+    <string name="title_location">현재 위치</string>
+
     <!-- DateFormat String -->
     <string name="wod_date_format">yyyy.MM.dd E</string>
 
