--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -14,8 +14,5 @@
 
 
     <!-- Permission Check -->
-    <string name="permission_location_allow_message">위치정보 사용을 허가 하시 겠습니까?</string>
-    <string name="permission_location_denied_message">위치정보 사용을 거부 하였습니다.\n사용을 원할 시 [설정] > [권한] 에서 권한을 허용 할 수 있습니다.</string>
-    <string name="permission_storage_allow_message">저장장치에 접근을 허용하시겠습니까?</string>
-    <string name="permission_storage_denied_message">저장장치에 접근을 거부 하였습니다.\n사용을 원할 시 [설정] > [권한] 에서 권한을 허용 할 수 있습니다.</string>
+    <string name="permission_denied_message">권한 사용을 거부 하였습니다.\n사용을 원할 시 [설정] > [권한] 에서 권한을 허용 할 수 있습니다.</string>
 </resources>
