--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="action_penometer_start">Penometer Start!</string>
     <string name="action_penometer_stop">Penometer Stop!</string>
 
+    <string name="title_stepcount">Current Step Count</string>
+    <string name="title_distance">Current Distance</string>
+
     <string name="title_location">Current Location</string>
 
     <!-- DateFormat String -->
