- Content Provider 추가  : 날짜별 기록 가져오기  : 전체 기록 가져오기  : 총 걸음횟수 가져오기

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -4,8 +4,8 @@
     <string name="title_penometer_history">만보기 기록</string>
     <string name="title_penometer_status">만보기 현황</string>
 
-    <string name="action_penometer_start">Penometer Start!</string>
-    <string name="action_penometer_stop">Penometer Stop!</string>
+    <string name="action_penometer_start">만보기 시작!</string>
+    <string name="action_penometer_stop">만보기 중지!</string>
 
 
     <string name="title_stepcount">걸은 횟수</string>
